--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,7 @@ h6 {
 
 :root {
     --satoshi-font: 'Satoshi', sans-serif;
+
     --font-64px: 4rem;
     --font-40px: 2.5rem;
     --font-32px: 2rem;
@@ -61,10 +62,12 @@ h6 {
     --font-20px: 1.25rem;
     --font-16px: 1rem;
     --font-14px: 0.875rem;
+
     --font-color-title: hsl(240, 2%, 32%);
     --font-color-light: hsl(212, 7%, 41%);
     --font-color-dark: hsl(212, 10%, 30%);
     --font-color-inactive: hsl(212, 8%, 61%);
+
     --font-weight-black: 900;
     --font-weight-bold: 700;
     --font-weight-medium: 500;
@@ -76,6 +79,7 @@ h6 {
     --color-gray-100: hsl(180, 11%, 98%);
     --color-gray-200: hsl(200, 12%, 95%);
     --color-gray-300: hsl(210, 9%, 91%);
+    --color-background-modal: hsla(212, 8%, 61%, 0.7);
 }
 
 
@@ -84,10 +88,6 @@ h6 {
 body {
     background: var(--color-gray-100);
     font-family: var(--satoshi-font);
-}
-
-a {
-    text-decoration: none;
 }
 
 /*Tipografía*/
@@ -99,9 +99,17 @@ a {
     text-align: center;
 }
 
+.h2 {
+    font-size: clamp(1.5rem, 1vw + 1.5rem, 2.5rem);
+    font-weight: var(--font-weight-black);
+    line-height: 1.1;
+    color: var(--font-color-title);
+    text-align: center;
+}
+
 .h3 {
     font-size: var(--font-24px);
-    font-weight: bold;
+    font-weight: var(--font-weight-bold);
     line-height: 1.1;
     color: var(--font-color-title);
 }
@@ -139,8 +147,14 @@ a {
     display: inline-block;
     margin: 0 auto;
     padding: 16px 60px;
+    border: none;
     border-radius: 62.5rem;
-    box-shadow: 0px 4px 18px hsla(234, 52%, 52%, 0.2)
+    box-shadow: 0px 4px 18px hsla(234, 52%, 52%, 0.2);
+    cursor: pointer;
+}
+
+a {
+    text-decoration: none;
 }
 
 /*Tipografía (colores)*/
@@ -195,6 +209,7 @@ a {
 .margin-main-cta {
     margin: 40px auto 0 auto;
 }
+
 
 
 /* INDEX (Home/Landing Page) */
@@ -336,11 +351,11 @@ footer {
     transition: background-color linear 240ms;
 }
 
-.list:hover{
+.list:hover {
     background-color: var(--color-gray-200);
 }
 
-.delete-list{
+.delete-list {
     position: absolute;
     top: 29px;
     right: 29px;
@@ -349,15 +364,15 @@ footer {
     transition: opacity linear 240ms;
 }
 
-.list:hover .delete-list{
+.list:hover .delete-list {
     opacity: 1;
 }
 
-.delete-list > path{
+.delete-list>path {
     transition: fill linear 240ms;
 }
 
-.delete-list:hover > path{
+.delete-list:hover>path {
     fill: var(--font-color-light);
 }
 
@@ -436,7 +451,7 @@ footer {
     transition: background-color linear 240ms;
 }
 
-.add-list:hover{
+.add-list:hover {
     background-color: var(--color-gray-200);
 }
 
@@ -461,5 +476,45 @@ footer {
 
     .add-list {
         min-width: 330px;
+    }
+}
+
+/* Ventana modal (agregar lista de tarea) */
+.bg-modal {
+    display: grid;
+    place-items: center;
+    position: fixed;
+    z-index: 101;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: var(--color-background-modal);
+}
+
+.modal {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 80px;
+
+    position: relative;
+    width: 90%;
+    max-width: 730px;
+
+    padding: 80px 40px 40px 40px;
+    border-radius: 24px;
+    background: var(--color-gray-100);
+
+    -webkit-animation-name: fadein;
+    -webkit-animation-duration: 0.5s;
+    animation-name: fadein;
+    animation-duration: 0.5s;
+}
+
+@media screen and (min-width: 600px) {
+    .modal{
+        padding: 120px 80px 80px 80px;
     }
 }
