--- a/css/styles.css
+++ b/css/styles.css
@@ -497,11 +497,11 @@ footer {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 80px;
+    gap: 40px;
 
     position: relative;
     width: 90%;
-    max-width: 730px;
+    max-width: 600px;
 
     padding: 80px 40px 40px 40px;
     border-radius: 24px;
@@ -511,10 +511,129 @@ footer {
     -webkit-animation-duration: 0.5s;
     animation-name: fadein;
     animation-duration: 0.5s;
+
 }
 
-@media screen and (min-width: 600px) {
-    .modal{
-        padding: 120px 80px 80px 80px;
+@media screen and (min-width: 650px) {
+    .modal {
+        padding: 100px 90px 80px 90px;
+    }
+
+    .modal>h2 {
+        padding: 0 50px 0 50px;
+    }
+}
+
+/* Form (agregar lista de tarea) */
+#addListForm {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+}
+
+.formControl-name,
+.formControl-description,
+.formControl-type {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+#addListForm label,
+#addListForm textarea,
+#addListForm input:not(input[type=submit], input[type=radio]) {
+    display: block;
+    width: 100%;
+}
+
+.formLabel {
+    font-size: clamp(16px, 1vw + 12px, 1.125rem);
+}
+
+.label-radioButton {
+    display: inline !important;
+}
+
+.input-text {
+    resize: none;
+
+    background-color: var(--color-gray-200);
+
+    border: none;
+    border-radius: 1rem;
+    padding: 16px 22px;
+    color: var(--font-color-dark);
+
+}
+
+::placeholder {
+    color: var(--font-color-inactive);
+    font-size: var(--font-16px);
+}
+
+.feedback-text {
+    font-size: var(--font-14px);
+    color: var(--font-color-light);
+}
+
+#addListForm input[type=submit] {
+    margin-top: 1.25rem;
+    padding: 0.875rem 3.75rem;
+}
+
+/*Radio buttons*/
+.containerRadioButtons {
+    display: flex;
+    flex-direction: column;
+    gap: 0.875rem;
+}
+
+.radioButton>input[type=radio] {
+    opacity: 0;
+    position: absolute;
+}
+
+.label-radioButton {
+    font-size: var(--font-16px);
+    color: var(--font-color-dark);
+
+    display: flex !important;
+    align-items: center;
+}
+
+.custom-radioButton {
+    --size: 16px;
+    display: inline-block;
+    width: var(--size);
+    height: var(--size);
+    margin-right: 8px;
+
+    background-color: var(--color-gray-300);
+    border-radius: 7px;
+    cursor: pointer;
+
+    transform: scale(1);
+    transition: background-color ease-in-out 220ms;
+}
+
+.radioButton:hover .custom-radioButton,
+.radioButton>input[type=radio]:focus+label .custom-radioButton {
+    background-color: var(--font-color-inactive);
+}
+
+.radioButton>input[type=radio]:checked+label .custom-radioButton {
+    background-color: var(--color-primary);
+}
+
+
+@media screen and (min-width: 650px) {
+    .containerRadioButtons {
+        flex-direction: row;
+        gap: 1.125rem;
+    }
+
+    .custom-radioButton {
+        margin-right: 6px;
     }
 }
