--- a/css/styles.css
+++ b/css/styles.css
@@ -155,6 +155,11 @@ body {
     border-radius: 62.5rem;
     box-shadow: 0px 0.25rem 1.125rem hsla(234, 52%, 52%, 0.2);
     cursor: pointer;
+    transition: box-shadow linear 240ms;
+}
+
+.main-cta:hover {
+    box-shadow: 0px 0.25rem 1.125rem 8px hsla(234, 57%, 57%, 0.158);
 }
 
 .filter-button {
@@ -336,6 +341,11 @@ footer {
     background-color: var(--color-gray-200);
     padding: 10px;
     border-radius: 16px;
+    transition: background-color linear 240ms;
+}
+
+.socials-svg:hover {
+    background-color: var(--color-gray-300);
 }
 
 @media screen and (min-width: 600px) {
@@ -393,7 +403,7 @@ footer {
     position: absolute;
     top: 29px;
     right: 29px;
-    opacity: 0;
+    opacity: 1;
 
     transition: opacity linear 240ms;
 }
@@ -424,7 +434,7 @@ footer {
 
 .list-title {
     overflow: hidden;
-    line-height: 1.8rem;
+    line-height: 1.9rem;
     max-height: 4rem;
     -webkit-box-orient: vertical;
     display: block;
@@ -686,7 +696,7 @@ footer {
     max-width: 550px;
 
     margin: 0 auto;
-    padding: 4px 4px 4px 4px;
+    padding: 6px 6px 6px 6px;
     border-radius: 16px;
 
     background-color: var(--color-white);
@@ -735,6 +745,11 @@ footer {
     border-radius: 12px;
 
     cursor: pointer;
+    transition: background-color linear 220ms;
+}
+
+#addTaskForm button[type=submit]:hover {
+    background-color: hsl(232deg 69.85% 60.82%);
 }
 
 /* Filtros*/
@@ -823,12 +838,18 @@ footer {
 .tasks .task {
     display: flex;
     align-items: center;
+    position: relative;
 
     width: 100%;
-    padding: 16px 24px;
+    padding: 1rem 3rem 1rem 1.5rem;
 
     border-radius: 16px;
     background-color: var(--color-gray-200);
+    transition: background-color linear 220ms;
+}
+
+.tasks .task:hover {
+    background-color: var(--color-gray-300);
 }
 
 .tasks .task>label {
@@ -864,13 +885,19 @@ footer {
     transition: background-color ease-in-out 220ms;
 }
 
-
 .task>input[type="checkbox"]:checked+label {
     text-decoration: line-through;
 }
 
 .task>input[type="checkbox"]:checked+label .custom-checkbox {
     background: transparent url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='17' height='17' fill='none'%3E%3Cpath fill='%236876F4' d='M5.44 11.89 2.124 8.854a.998.998 0 0 0-.673-.255.998.998 0 0 0-.673.255.837.837 0 0 0-.279.617c0 .114.025.228.072.334a.871.871 0 0 0 .207.283l3.992 3.656c.372.341.974.341 1.346 0L16.221 4.49a.837.837 0 0 0 .279-.617c0-.231-.1-.453-.279-.617A.998.998 0 0 0 15.548 3a.998.998 0 0 0-.673.255L5.439 11.89Z'/%3E%3C/svg%3E") no-repeat center;
+}
+
+.delete-list-task {
+    opacity: 1;
+    top: 12px;
+    right: 16px;
+    cursor: pointer;
 }
 
 
@@ -881,5 +908,19 @@ footer {
 
     .column-tasks {
         margin: 0;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .delete-list {
+        opacity: 0;
+    }
+
+    .delete-list-task {
+        opacity: 0;
+    }
+
+    .tasks .task:hover .delete-list-task {
+        opacity: 1;
     }
 }
