--- a/css/styles.css
+++ b/css/styles.css
@@ -568,7 +568,7 @@ footer {
     width: 97%;
     max-width: 600px;
 
-    padding: 90px 40px 40px 40px;
+    padding: 90px 24px 40px 24px;
     border-radius: 24px;
     background: var(--color-gray-100);
 
@@ -585,8 +585,8 @@ footer {
     border-radius: 16px;
 
     position: absolute;
-    top: 35px;
-    right: 40px;
+    top: 30px;
+    right: 24px;
     cursor: pointer;
 }
 
@@ -609,6 +609,11 @@ footer {
 
     .modal>h2 {
         padding: 0 50px 0 50px;
+    }
+
+    .close-modal {
+        top: 34px;
+        right: 34px;
     }
 }
 
