--- a/css/styles.css
+++ b/css/styles.css
@@ -567,12 +567,10 @@ footer {
     gap: 40px;
 
     position: relative;
-    width: 97%;
-    max-width: 600px;
+    width: 100%;
+    height: 100%;
 
-    margin: 12px 0;
     padding: 90px 24px 40px 24px;
-    border-radius: 12px;
     background: var(--color-gray-100);
 
     -webkit-animation-name: fadein;
@@ -607,6 +605,8 @@ footer {
 
 @media screen and (min-width: 650px) {
     .modal {
+        height: auto;
+        max-width: 600px;
         margin: 30px 0;
         padding: 100px 90px 80px 90px;
         border-radius: 24px;
