--- a/css/styles.css
+++ b/css/styles.css
@@ -168,24 +168,26 @@ body {
     font-weight: var(--font-weight-medium);
     color: var(--font-color-dark);
 
-    padding: 6px 20px;
+    padding: 8px 20px;
     border: none;
-    border-radius: 10px;
-    background-color: var(--color-gray-200);
+    border-radius: 12px;
+    background-color: hsl(234deg 100% 87.54%);
 
     cursor: pointer;
 
-    transition: transform linear 240ms;
+    transition: transform linear 240ms, background-color linear 240ms, color linear 240ms;
 }
 
 .filter-button:hover {
     transform: translate(0, -2px);
+    background-color: hsl(232deg 69.85% 60.82%);
+    color: var(--color-white);
 }
 
-.filter-selected {
+/* .filter-selected {
     color: var(--color-white);
     background-color: hsl(232deg 69.85% 60.82%);
-}
+} */
 
 a {
     text-decoration: none;
